# lblcs-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  app.py  bot.py  compose.yaml  compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: push_on_merge.yaml
cogs/: scraper.py  tournaments.py
discord_server_scraper/: __main__.py  tournaments.py
lblcs_bot/: __main__.py  bot.py
lblcs_bot/cogs/: scraper.py  tournaments.py
lblcs_bot/modals/: TournamentCodeCreation.py
modals/: GameCreationModal.py  code_generation_modal.py
models/: metadata.py
src/: bot.py
src/cogs/: scraper.py  tournaments.py
src/db/: database.py
src/modals/: code_generation_modal.py
src/models/: metadata.py  user.py
