[tool.poetry]
name = "discord-server-scraper"
version = "0.1.0"
description = "Scrapes information from servers such as roles, users and inserts it into a database for the LBLCS."
authors = ["Alexander Summer"]
license = "MIT"
readme = "README.md"
packages=[{include = "discord_server_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
